--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
+       
     </head>
+    
     <body>
         <div class="form-div">
             <div class="form-container">
@@ -20,7 +22,7 @@
                         <p>PEX is a digital market platform that allows <br>users to buy and sell farm produce, tools and <br>inputs with and additional convenience of delivery <br>from door to door.</p>
                         <h1>SIGN UP <br>TO SET UP <br>YOUR SHOP <br>FOR FREE</h1>
                         <hr class="line">
-                        <form action="#" method="post">
+                        <form action="" id="contactForm" method="post">
                             <div class="field">
                                 <label for="name">Name:</label>
                                 <br>
@@ -32,9 +34,9 @@
                                 <input id="email" type="email" name="email">
                             </div>
                             <div class="field">
-                                <label for="phone">Phone Number:</label>
+                                <label for="mobile">Phone Number:</label>
                                 <br>
-                                <input id="phone" type="tel" name="phone">
+                                <input id="mobile" type="tel" name="phone">
                             </div>
                             <div class="submit">
                                 <input type="submit" name="submit" value="SUBMIT">
@@ -44,4 +46,23 @@
                 </div>
             </div>
         </div>
+        <script>
+            contactForm.onsubmit = async (e) => {
+              e.preventDefault();
+              let formData = new FormData(document.getElementById('contactForm'));
+              formData.append('source', 'Website');
+              for (var pair of formData.entries()) {
+              console.log(pair[0]+ ', ' + pair[1]); 
+              }
+              let response = await fetch('https://r35wi00jx5.execute-api.eu-west-1.amazonaws.com/develdee', {
+                  method: 'POST',
+                  mode: 'no-cors',
+                  body: formData,
+              });
+
+              let result = await response.json();
+
+              alert(result.message);
+          };
+        </script>
     </body></html>
