api url correction

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               for (var pair of formData.entries()) {
               console.log(pair[0]+ ', ' + pair[1]); 
               }
-              let response = await fetch('https://r35wi00jx5.execute-api.eu-west-1.amazonaws.com/develdee', {
+              let response = await fetch('https://r35wi00jx5.execute-api.eu-west-1.amazonaws.com/develdee/feedback', {
                   method: 'POST',
                   mode: 'no-cors',
                   body: formData,
