--- a/index.html
+++ b/index.html
@@ -1,68 +1,85 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Form</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
-       
-    </head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PEX Interest Form</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
     
-    <body>
-        <div class="form-div">
-            <div class="form-container">
-                <div class="inner-div">
-                    <div class="inner-cont">
-                        <div class="header">
-                            <img src="images/logo.png">
-                            <h3>the fresh<br> farm market.</h3>
-                        </div>
-                        <p>PEX is a digital market platform that allows <br>users to buy and sell farm produce, tools and <br>inputs with and additional convenience of delivery <br>from door to door.</p>
-                        <h1>SIGN UP <br>TO SET UP <br>YOUR SHOP <br>FOR FREE</h1>
-                        <hr class="line">
-                        <form action="" id="contactForm" method="post">
-                            <div class="field">
-                                <label for="name">Name:</label>
-                                <br>
-                                <input id="name" type="text" name="name">
-                            </div>
-                            <div class="field">
-                                <label for="email">Email:</label>
-                                <br>
-                                <input id="email" type="email" name="email">
-                            </div>
-                            <div class="field">
-                                <label for="mobile">Phone Number:</label>
-                                <br>
-                                <input id="mobile" type="tel" name="phone">
-                            </div>
-                            <div class="submit">
-                                <input type="submit" name="submit" value="SUBMIT">
-                            </div>
-                        </form>
-                    </div>
-                </div>
+  <body>
+    <div class="form-div">
+      <div class="form-container">
+        <div class="inner-div">
+          <div class="inner-cont">
+            <div class="header">
+              <img src="images/logo.png">
+              <h3>the fresh<br> farm market.</h3>
             </div>
+            <p>PEX is a digital market platform that allows <br>users to buy and sell farm produce, tools and <br>inputs with the convenience of door to door delivery.</p>
+            <h1>SIGN UP FOR YOUR SHOP <br><center>FOR FREE!</center></h1>
+            <center><hr class="line"></center>
+            <form action="" id="contactForm">
+              <div class="field">
+                <label for="name">Name:</label>
+                <br>
+                <input id="name" type="text" name="name">
+              </div>
+              <div class="field">
+                <label for="email">Email:</label>
+                <br>
+                <input id="email" type="email" name="email">
+              </div>
+              <div class="field">
+                <label for="mobile">Phone Number:</label>
+                <br>
+                <input id="mobile" type="tel" name="phone">
+              </div>
+             <div class="field">
+                <label for="message">Message:</label>
+                <br>
+                <textarea id="message" type="text" name="message" cols="37" rows="3"></textarea>
+              </div>
+              <div class="submit">
+                <input type="submit" name="submit" value="SUBMIT">
+              </div>
+            </form>
+          </div>
         </div>
-        <script>
-            contactForm.onsubmit = async (e) => {
-              e.preventDefault();
-              let formData = new FormData(document.getElementById('contactForm'));
-              formData.append('source', 'Website');
-              for (var pair of formData.entries()) {
-              console.log(pair[0]+ ', ' + pair[1]); 
-              }
-              let response = await fetch('https://r35wi00jx5.execute-api.eu-west-1.amazonaws.com/develdee', {
-                  method: 'POST',
-                  mode: 'no-cors',
-                  body: formData,
-              });
+      </div>
+    </div>
+    <script>
+      $(document).ready(function(){
+        $("input[type=submit]").click(function(e){
+          e.preventDefault();
 
-              let result = await response.json();
-
-              alert(result.message);
+          var apiGatewayInvokeURL = 'https://r35wi00jx5.execute-api.eu-west-1.amazonaws.com/develdee/feedback';
+          var body = {
+            name : $("#name").val(), 
+            email : $("#email").val(), 
+            mobile : $("#mobile").val(), 
+            message: $("#message").val(),
+            source: 'Website'
           };
-        </script>
-    </body></html>
+          fetch(apiGatewayInvokeURL, {
+            method: 'POST', // *GET, POST, PUT, DELETE, etc.
+            mode: 'no-cors', // no-cors, *cors, same-origin
+            cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+            headers: {
+              'Content-Type': 'application/json'
+              // 'Content-Type': 'application/x-www-form-urlencoded',
+            },
+            body: JSON.stringify(body) // body data type must match "Content-Type" header
+          }).then(response => {
+            $("#contactForm").trigger('reset');
+            alert('Feedback received successfull!');
+          }).catch(err => {
+          });
+        });
+      });
+    </script>
+  </body>
+</html>
